--- a/styles.css
+++ b/styles.css
@@ -12,19 +12,35 @@ body{
 
 /* navbar styles*/
 .navbar{
-	padding-top: 15px;
-	padding-bottom: 15px;
+	padding-top: 17px;
+	padding-bottom: 17px;
 	border: 0;
 	border-radius: 0;
 	margin-bottom: 0;
-	font-size: 12px;
+	font-size: 14px;
+	transition: 0.7s;
+	background-color: rgba(35,35,35,0.5);
 }
 
+.nav li a, .navbar-header a{
+	color: #ffffff !important;
+}
+
+.nav li a:hover{
+	color: #1abc9c !important;
+}
+
+.navbarStateWhenScrolled{
+	background-color: rgba(0, 0, 0, 1);
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
 
 /* home styles*/
 .bg-home{
-	background: #1abc9c;
+	background: url("assets/images/books.jpeg");
 	color: #000;
+	background-size: cover;
 	padding-top: 70px;
 	padding-bottom: 70px;
 	padding-right: 10px;
@@ -184,6 +200,6 @@ body{
 }
 
 .bg-footer-text{
-
+	color: #ffffff;
 	font-size: 16px;
 }
