added social media links to website

--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,10 @@ body{
 	font-size: 16px;
 }
 
+.social-media-icons{
+	width: 27px;
+}
+
 /* footer styles*/
 .bg-footer{
 	background-color: #2f2f2f;
