--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,15 @@ body{
 	box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
 
+.navbar-menu{
+	background-color: rgba(255,255,255,0);
+	border: 0px;
+}
+
+.navbar-menu:hover{
+	background-color: #F0AD4E !important;
+}
+
 /* home styles*/
 .bg-home{
 	background: url("assets/images/books-optimal.jpg");
