--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ body{
 	background: rgba(0,0,0,0.2);
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
+	cursor: pointer;
 }
 
 /* contact styles*/
