--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@ body{
 }
 
 .clickable:hover{
-	background: rgba(0,0,0,0.2);
+	opacity: 0.8;
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
 	cursor: pointer;
