--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,7 +50,7 @@ body{
 
 /* home styles*/
 .bg-home{
-	background: url("assets/images/books-optimal.jpg");
+	background: url("images/books.jpg");
 	color: #000;
 	background-size: cover;
 	padding-top: 70px;
