--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,9 +50,10 @@ body{
 
 /* home styles*/
 .bg-home{
-	background: url("images/books.jpg");
+	background: url("../images/books.jpg");
 	color: #000;
 	background-size: cover;
+	display: block;
 	padding-top: 70px;
 	padding-bottom: 70px;
 	padding-right: 10px;
@@ -199,6 +200,31 @@ body{
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
 	cursor: pointer;
+}
+
+/*view staff styles*/
+.bg-staff{
+	background-image: url("../images/staff-background.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: #fff;
+	padding-right: 50px;
+	padding-left: 50px;
+	padding-top: 70px;
+	padding-bottom: 70px;
+}
+
+.bg-staff-text h1{
+	font-size: 27px;
+	margin-bottom: 50px;
+}
+
+.bg-staff-text h3{
+	font-size: 18px;
+}
+
+.bg-staff-text p{
+	font-size: 16px;
 }
 
 /* contact styles*/
