--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,6 +227,14 @@ body{
 	font-size: 16px;
 }
 
+.bg-staff-card{
+	background-color: #F5F5F5;
+	margin: 25px;
+	padding: 15px;
+	margin-bottom: 15px;
+	box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
+}
+
 /* contact styles*/
 .bg-contact{
 	background-color: #F2F5F7;
