--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,7 @@ body{
 	font-size: 20px;
 }
 
+
 /* general information styles*/
 .bg-info{
 	background-color: #ffffff;
@@ -104,6 +105,11 @@ body{
 }
 
 .bg-info-text p{
+
+	font-size: 16px;
+}
+
+.bg-info-text a{
 
 	font-size: 16px;
 }
